feat: adding base project

--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,17 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+TWITTER_OAUTH_APP_ID=""
+TWITTER_CLIENT_ID=""
+TWITTER_CLIENT_SECRET=""
+TWITTER_REDIRECT_URI="http://localhost:8000/oauth/twitter/callback"
+TWITTER_CLIENT_SCOPES="tweet.read offline.access like.read users.read"
+
+DISCORD_CLIENT_ID=""
+DISCORD_CLIENT_SECRET="-McTfcGpfbLZNcYpes4p"
+DISCORD_REDIRECT_URI="http://localhost:8000/oauth/discord/callback"
+
+GITHUB_CLIENT_ID="".
+GITHUB_CLIENT_SECRET=""
+GITHUB_CLIENT_REDIRECT="http://localhost:8000/oauth/github/callback"
